Improvments
 -  Добавлена метка удаления.
 - Добавлена ручка восстановления удалённого сниппета.
 - Добавлен конфигурационный файл.
